[package]
name = "rtriangulate"
version = "0.2.1"
authors = ["Samuel Loretan <tynril@gmail.com>"]
license = "MIT"
description = "Delaunay triangulation on a set of points"
repository = "https://github.com/tynril/rtriangulate"
documentation = "https://tynril.github.io/rtriangulate"
keywords = ["delaunay", "triangulation", "bourke"]
readme = "README.md"

[dependencies]

[dev-dependencies]
bencher = "0.1.2"

[[bench]]
name = "triangulate"
harness = false

[lib]
name = "rtriangulate"
path = "src/lib.rs"
